# fluxions-ssg

./: CMakeLists.txt  README.md  fluxions-ssg.sln  fluxions-ssg.vcxproj  fluxions-ssg.vcxproj.filters
include/: fluxions_ssg_aniso_light.hpp  fluxions_ssg_base.hpp  fluxions_ssg_dirto_light.hpp  fluxions_ssg_environment.hpp  fluxions_ssg_material_library.hpp  fluxions_ssg_materials.hpp  fluxions_ssg_point_light.hpp  fluxions_ssg_scene_graph.hpp  fluxions_ssg_ssphh_light.hpp  fluxions_ssg_ssphh_utilities.hpp
src/: fluxions_ssg_path_animation.cpp  fluxions_ssg_pch.hpp  fluxions_ssg_point_light.cpp  fluxions_ssg_property.cpp  fluxions_ssg_scene_graph.cpp  fluxions_ssg_writer.cpp
